<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_delete_all_data">Delete All Entries</string>
    <string name="action_delete_current_data">Delete</string>
    <string name="action_edit_data">Edit</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="sale">Sale</string>
    <string name="shipment">Shipment</string>
    <string name="order">Order</string>

    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="dollar">$</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_hint">Supplier Email</string>

    <string name="inventory_is_empty">Inventory is Empty !</string>
    <string name="get_started">Get started by adding an Inventory</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="ordering_products">Ordering Products</string>
    <string name="send_email">Send Email</string>
    <string name="enter_sold_quantity">Enter sold Quantity</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="received_shipment">Enter the received shipment quantity</string>
    <string name="delete_current_inventory">Delete current Inventory ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_failed">Delete has failed</string>
    <string name="delete_successfull">Delete was successfull</string>

    <string name="add_inventory">Add Inventory</string>
    <string name="edit_inventory">Edit Inventory</string>
    <string name="discard_changes">Discard changes and keep Editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="data_insert_failed">Data insert has failed</string>
    <string name="data_insert_successfull">Data insert is successfull</string>
    <string name="data_update_failed">Data update has failed</string>
    <string name="data_update_successfull">Data update is successfull</string>

    <string name="enter_sale_quantity">Enter sale quantity</string>
    <string name="all_inventory_delete">Do you want to delete all inventory ?</string>
    <string name="unknown">Unknown</string>

</resources>
