<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sanket.inventoryapp.DetailsActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_above="@+id/details_inventory_order"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/details_inventory_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#DD000000"
                android:text="@string/product_name"
                style="@style/CategoryStyle"
                />

            <TextView
                android:id="@+id/details_inventory_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                style="@style/EditorFieldStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#DD000000"
                android:text="@string/product_price"
                style="@style/CategoryStyle"
                />

            <TextView
                android:id="@+id/details_inventory_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                style="@style/EditorFieldStyle"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#DD000000"
                android:text="@string/product_supplier"
                style="@style/CategoryStyle"
                />

            <TextView
                android:id="@+id/details_inventory_supplier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                style="@style/EditorFieldStyle"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/sell_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/sale"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/details_inventory_quantity"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:textStyle="bold"
                style="@style/EditorFieldStyle"
                android:gravity="center"/>

            <Button
                android:id="@+id/shipment_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:text="@string/shipment"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/details_inventory_order"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/order"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
