<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sanket.inventoryapp.EditorActivity">

    <ImageView
        android:id="@+id/inventory_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:src="@drawable/noimage"
        android:layout_marginBottom="8dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <ImageButton
            android:background="@color/colorPrimary"
            android:id="@+id/camera_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/camera"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <ImageButton
            android:background="@color/colorPrimary"
            android:id="@+id/gallery_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/gallery"
            android:layout_gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/quantity"
                android:inputType="number"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/price"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/dollar"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_hint"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
